WIP: implemented extension as a tab content

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+config.json
 
 # Logs
 logs
@@ -13,6 +14,8 @@ node_modules
 dist
 dist-ssr
 *.local
+
+build
 
 # Editor directories and files
 .vscode/*
