--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panel",
+  "name": "my-chrome-extension",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "vite-plugin-static-copy": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/chrome": "^0.0.323",
-    "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
