--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-chrome-extension",
+  "name": "reading-helper",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.77.1",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "styled-components": "^6.1.18",
     "vite-plugin-static-copy": "^3.0.0"
   },
   "devDependencies": {
@@ -19,6 +22,7 @@
     "@types/chrome": "^0.0.323",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
